<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/subham" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/name"
            android:textSize="34sp"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical">

<!--            Layer first-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/change_dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/change"/>

            </LinearLayout>

            <!--            Layer Second-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/orders"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/check_list"/>

            </LinearLayout>

            <!--            Layer Third-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/track_package"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    android:text="@string/track"/>

            </LinearLayout>

            <!--            Layer Fourth-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/Change_password"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/change"/>

            </LinearLayout>

            <!--            Layer Fifth-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/customer_care"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    android:layout_height="match_parent"
                    android:text="@string/contact"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>


</FrameLayout>