<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CameraFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/enter_details"
                android:textSize="34sp"
                android:textStyle="bold" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:orientation="vertical">

                <!--            Layer first-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/upload_image"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:layout_weight="0.5"
                        android:text="@string/click_image"
                        android:drawableLeft="@drawable/ic_baseline_camera_alt_24"/>

                </LinearLayout>

                <!--            Layer Second-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/enter_title"
                        android:textSize="16sp"
                        android:textStyle="bold" />



                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:hint="Title"
                        android:padding="10dp"/>

                </LinearLayout>

                <!--            Layer Third-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">



                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/enter_price"
                        android:textSize="16sp"
                        android:textStyle="bold" />



                    <EditText
                        android:id="@+id/editTextNumberDecimal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:hint="Price"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <!--            Layer Fourth-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">



                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/category"
                        android:textSize="16sp"
                        android:textStyle="bold" />



                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5" />

                </LinearLayout>

                <!--            Layer Fifth-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/description"
                        android:textSize="16sp"
                        android:textStyle="bold" />



                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:hint="Description"
                        android:padding="10dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>